[package]
name = "order-book-flux"
version = "0.1.0"
edition = "2021"
description = "Low-latency Order Flow Imbalance engine in Rust"
license = "MIT"

[lib]
name = "order_book_flux"
path = "src/lib.rs"

[[bin]]
name = "order-book-flux"
path = "src/main.rs"
required-features = ["std"]

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"
required-features = ["std"]

[features]
default = ["std"]
std = ["dep:serde_json", "dep:ringbuf", "dep:core_affinity"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", optional = true }
ringbuf = { version = "0.4", optional = true }
core_affinity = { version = "0.8", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tick_to_signal"
harness = false
