[package]
name = "order-book-flux"
version = "0.1.0"
edition = "2021"
description = "Low-latency Order Flow Imbalance engine in Rust"
license = "MIT"

[lib]
name = "order_book_flux"
path = "src/lib.rs"

[[bin]]
name = "order-book-flux"
path = "src/main.rs"
required-features = ["std"]

[features]
default = ["std"]
std = ["dep:serde_json", "dep:time", "dep:tungstenite", "dep:url", "dep:reqwest"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", optional = true }
time = { version = "0.3", features = ["formatting"], optional = true }
tungstenite = { version = "0.20", features = ["native-tls"], optional = true }
url = { version = "2", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"



[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tick_to_signal"
harness = false

[[bench]]
name = "binance_feed"
harness = false
